:bug: Fix charts not showing in full width in Google Chrome

--- a/ui/src/components/StackedAreaChart/stackedAreaChart.scss
+++ b/ui/src/components/StackedAreaChart/stackedAreaChart.scss
@@ -4,6 +4,7 @@
 
 .chartDiv {
   display: flex;
+  width: 100%;
 }
 
 .indicatorLine{
